# obsidian-dictionary-sync-tool

./: .editorconfig  .gitignore  .markdownlint.yaml  README.md  logging.yaml  pyproject.toml  readme.md  sync.py
dict-re/: cust.txt  cust.txt.ORIG  readme.md
